    - cif_fix_values:
      - updating the built-in CIF Core dictionary from version 2.4.1 to 2.4.5.
    - cif_select:
      - ceasing to convert dots ('.') to underscores ('_') in data item names
        by default.
    - COD::CIF::Data::Check:
      - modifying the check_author_names() subroutine to no longer raise
        warnings about missing _publ_author_name data items.
    - COD::CIF::Data::CIF2COD:
      - the module no longer returns empty strings instead of NULL values
        for the author and title fields;
      - modifying the Z value handling logic to use the get_formula_units_z()
        subroutine and to try to estimate the Z value from other data items
        in cases when it is malformed or not provided.
      - the calculated cell volume is now reused in other calculations
        instead repeatedly calculating it.
    - COD::CIF::Data::EstimateZ:
      - the cif_estimate_z() subroutine now accepts optional parameters
        that override the data values provided in the CIF data block.
    - COD::Spacegroups::Lookup::COD:
      - renaming space group 'P 1 (-a,-b+c,b+c)' to 'A 1';
      - renaming space group 'P 1 (-a+c,-b,a+c)' to 'B 1';
      - renaming space group 'P 1 (b+c,a+c,a+b)' to 'I 1';
      - replacing the Hall space group symbol with a shorter one for
        space groups from the extra_settings hash.
    - COD::UserMessage:
      - the space (" ") symbol occurring in program name field is no longer
        escaped;
      - the newline ('\n') symbol and various braces ('[', ']', '(', ')', 
        '{', '}') are now escaped in the program name and filename fields;
      - the tab ('\t') symbol is now escaped in the filename field.
  * Removed:
    - cif_cod_check:
      - unused COD::CIF::Tags::Manage::tag_is_empty() import.
    - COD::CIF::Data::CODNumbers::have_equiv_timestamps:
      - unused DateTime::Format::RFC3339 import.
  * Fixed:
    - cif_cod_check: