@@ -1,4 +1,7 @@
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: WARNING, recommended data item '_chemical_formula_sum' was not found.
+scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: WARNING, _journal_name_full is undefined.
+scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: WARNING, neither _journal_year nor _journal_volume is defined.
+scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: WARNING, neither _journal_page_first nor _journal_article_reference is defined.
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: NOTE, name 'S. PHAN THANH' seems unusual.
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: NOTE, names should be written as 'First von Last', 'von Last, First', or 'von Last, Jr, First' (mind the case!).
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_global: NOTE, name 'J. MARROT' seems unusual.
@@ -14,4 +17,4 @@ scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_C5H17AlN2O8P2: WAR
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_C5H17AlN2O8P2: WARNING, no symmetry information found.
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp data_C5H17AlN2O8P2: WARNING, the space group symmetry operation list was not provided.
 scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp: NOTE, 5 NOTE(s) encountered.
-scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp: NOTE, 10 WARNING(s) encountered.
+scripts/cif_cod_check: tests/cases/cif_cod_check_012.inp: NOTE, 13 WARNING(s) encountered.
