@@ -1,5 +1,8 @@
+scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_global: WARNING, _journal_name_full is undefined.
+scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_global: WARNING, neither _journal_year nor _journal_volume is defined.
+scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_global: WARNING, neither _journal_page_first nor _journal_article_reference is defined.
 scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_C5H17AlN2O8P2: WARNING, _journal_name_full is undefined.
 scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_C5H17AlN2O8P2: WARNING, _publ_section_title is undefined.
 scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_C5H17AlN2O8P2: WARNING, neither _journal_year nor _journal_volume is defined.
 scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp data_C5H17AlN2O8P2: WARNING, neither _journal_page_first nor _journal_article_reference is defined.
-scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp: NOTE, 4 WARNING(s) encountered.
+scripts/cif_cod_check: tests/cases/cif_cod_check_014.inp: NOTE, 7 WARNING(s) encountered.
