@@ -1,4 +1,7 @@
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: WARNING, recommended data item '_chemical_formula_sum' was not found.
+scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: WARNING, _journal_name_full is undefined.
+scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: WARNING, neither _journal_year nor _journal_volume is defined.
+scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: WARNING, neither _journal_page_first nor _journal_article_reference is defined.
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: WARNING, name '?' contains symbol '?' that is not permitted in names.
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: NOTE, names should be written as 'First von Last', 'von Last, First', or 'von Last, Jr, First' (mind the case!).
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_publ: WARNING, no symmetry information found.
@@ -35,4 +38,4 @@ scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_p_01
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_p_01: WARNING, the space group symmetry operation list was not provided.
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp data_A_BA4TA2O9_RT_p_01: WARNING, no space group symbol to check cell constraints.
 scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp: NOTE, 1 NOTE(s) encountered.
-scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp: NOTE, 35 WARNING(s) encountered.
+scripts/cif_cod_check: tests/cases/cif_cod_check_095.inp: NOTE, 38 WARNING(s) encountered.
